# gpt-image-codex-hermes

./: README.md  README.zh.md  pyproject.toml
.github/workflows/: sync-upstream.yml
scripts/: render_readme_from_upstream.py  sync_upstream.py
skills/gpt-image-codex-hermes/: SKILL.md
skills/gpt-image-codex-hermes/scripts/: generate.py
src/gpt_image_cli/: cli.py
